# MultiPlatformChat

./: CMakeLists.txt  LICENSE  MultiPlatformChat.sln  README.md
MultiPlatformChat/: CMakeLists.txt  MultiPlatformChat.vcxproj  MultiPlatformChat.vcxproj.filters
MultiPlatformChat/src/: Client.cpp  Client.h  NetworkUnit.cpp  NetworkUnit.h  Server.cpp  Server.h  main.cpp
